Fix navbar overflow on mobile

--- a/sunny_sales_web/src/index.css
+++ b/sunny_sales_web/src/index.css
@@ -80,6 +80,7 @@ body {
   justify-content: space-between;
 
   align-items: center;
+  box-sizing: border-box;
   padding: 12px 24px;
   background-color: #000;
   border-radius: 40px;
